<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="info.androidhive.materialdesign.activity.LoginPage">


    <!--<include-->
        <!--android:id="@+id/toolbar"-->
        <!--layout="@layout/toolbar" />-->


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/login_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_lable"
            android:gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/blue"
            android:textSize="30sp"
            />


    <EditText
        android:id="@+id/username_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username_placeholder"
        android:inputType="textNoSuggestions"
        android:layout_below="@+id/login_label"
        />

    <EditText
        android:id="@+id/password_text"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_placeholder"
        android:inputType="textNoSuggestions"
        android:layout_marginTop="22dp"
        android:layout_below="@+id/username_text"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/password_text"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true"
        />
    <!--<EditText-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
        <!--android:hint="Search text"-->
        <!--android:id="@+id/editText"-->
        <!--&lt;!&ndash;android:background="@drawable/edit_text_bkgd"&ndash;&gt;-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:drawablePadding="10dp"-->
        <!--android:drawableLeft="@android:drawable/ic_search_category_default" />-->

        </RelativeLayout>

</RelativeLayout>